--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "focus-jam",
   "version": "1.0.0",
-  "description": "Lock in and jam on with YouTube.",
+  "description": "Lock in and jam with YouTube.",
   "license": "MIT",
   "private": true,
   "keywords": [
