--- a/package.json
+++ b/package.json
@@ -4,19 +4,6 @@
   "description": "Lock in and jam with YouTube.",
   "license": "MIT",
   "private": true,
-  "keywords": [
-    "typesctipt",
-    "javascript",
-    "nextjs",
-    "next15",
-    "react",
-    "react19",
-    "tailwindcss",
-    "tailwindv4",
-    "shadcnui",
-    "eslint",
-    "vercel"
-  ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prebuild": "pnpm run lint",
@@ -74,6 +61,7 @@
     "jsxSingleQuote": false,
     "plugins": [
       "prettier-plugin-tailwindcss"
-    ]
+    ],
+    "tailwindStylesheet": "./app/globals.css"
   }
 }
