--- a/package.json
+++ b/package.json
@@ -52,16 +52,9 @@
     "tailwindcss": "^4.1.3",
     "typescript": "5.7.2"
   },
-  "prettier": {
-    "semi": true,
-    "tabWidth": 2,
-    "printWidth": 100,
-    "bracketSpacing": true,
-    "singleQuote": false,
-    "jsxSingleQuote": false,
-    "plugins": [
-      "prettier-plugin-tailwindcss"
-    ],
-    "tailwindStylesheet": "./app/globals.css"
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
